--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -50,15 +50,6 @@
                             <td></td>
                             <td></td>
                             <td></td>
-                            <td>Доставка</td>
-                            <td class="text-right">-- €</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
                             <td><strong>До сплати</strong></td>
                             <td class="text-right"><strong>${{ cart.get_total_price }}</strong></td>
                         </tr>
@@ -75,7 +66,7 @@
                     {% comment %} <button class="btn btn-block btn-light">Continue Shopping</button> {% endcomment %}
                 </div>
                 <div class="col-sm-12 col-md-6 text-right">
-                    <button class="btn btn-lg btn-block btn-success text-uppercase">Оформити</button>
+                    <a class="btn btn-lg btn-block btn-success text-uppercase" href="{% url "orders:order_create" %}" class="button light">Оформити</a>
                 </div>
             </div>
         </div>
