--- a/orders/templates/created.html
+++ b/orders/templates/created.html
@@ -6,7 +6,9 @@
 {% endblock %}
 
 {% block content %}
-<h1>Thank you</h1>
-<p>Your order has been successfully completed. Your order number is
-    <strong>{{ order.id }}</strong>.</p>
+<h1>Успіх\невдача</h1>
+<p>Номер замовлення</p>
+<p>Номер квитанції</p>
+
+    <strong>{{ order }}</strong>.</p>
 {% endblock %}
