--- a/orders/templates/create.html
+++ b/orders/templates/create.html
@@ -41,8 +41,8 @@
 
    
   <div id="liqpay_checkout"></div>
-  {% comment %} {{ html|safe }} {% endcomment %}
-  <script>
+  {{ html|safe }}
+  {% comment %} <script>
     window.LiqPayCheckoutCallback = function() {
         LiqPayCheckout.init({
             data: "{{ data }}",
@@ -60,6 +60,6 @@
         });
     };
 </script>
-<script src="//static.liqpay.ua/libjs/checkout.js" async></script>
+<script src="//static.liqpay.ua/libjs/checkout.js" async></script> {% endcomment %}
 </div>
 {% endblock %}
