--- a/shop/templates/detail.html
+++ b/shop/templates/detail.html
@@ -14,75 +14,39 @@
                     <div class="item">
                         <img src="{% if product.image %}{{ product.image.url }}{% else %}{% static "img/no_image.png" %}{% endif %}">
                     </div>
-                    {% comment %} <div class="item">
-                          <img src="" />
-                    </div>
-                    <div class="item">
-                          <img src="" />
-                    </div>
-                    <div class="item">
-                          <img src="" />
-                    </div>
-                    <div class="item">
-                          <img src="" />
-                    </div>
-                    <div class="item">
-                          <img src="" />
-                    </div>
-                    <div class="item">
-                          <img src="" />
-                    </div> {% endcomment %}
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="product-dtl">
-                    <div class="product-info">
-                        <div class="product-name">Оцінка</div>
-                        <div class="reviews-counter">
-                            <div class="rate">
-                                <input type="radio" id="star5" name="rate" value="5" checked />
-                                <label for="star5" title="text">5 stars</label>
-                                <input type="radio" id="star4" name="rate" value="4" checked />
-                                <label for="star4" title="text">4 stars</label>
-                                <input type="radio" id="star3" name="rate" value="3" checked />
-                                <label for="star3" title="text">3 stars</label>
-                                <input type="radio" id="star2" name="rate" value="2" />
-                                <label for="star2" title="text">2 stars</label>
-                                <input type="radio" id="star1" name="rate" value="1" />
-                                <label for="star1" title="text">1 star</label>
-                              </div>
-                            <span>3 Reviews</span>
-                        </div>
-                        {% comment %} <div class="product-price-discount"><p class="price">${{ product.price }}</p></div> {% endcomment %}
+                    <div class="product-info border">
+                        <div class="product-name">{{ product.name }}</div>   
+                        <p>{{ product.description|linebreaks }}</p>                    
                     </div>
-                    <p>{{ product.description|linebreaks }}</p>
-                    {% comment %} <div class="row">
-                        <div class="col-md-6">
-                            <label for="size">Size</label>
-                            <select id="size" name="size" class="form-control">
-                                <option>S</option>
-                                <option>M</option>
-                                <option>L</option>
-                                <option>XL</option>
-                            </select>
-                        </div>
-                        <div class="col-md-6">
-                            <label for="color">Color</label>
-                            <select id="color" name="color" class="form-control">
-                                <option>Blue</option>
-                                <option>Green</option>
-                                <option>Red</option>
-                            </select>
-                        </div>
-                    </div> {% endcomment %}
-                    <div class="product-count">
-                        <label for="size">Ціна</label>
-                        <p class="price">${{ product.price }}</p>
+                    <div class="product-info border">
+                        <div class="product-name">Ціна</div> 
+                        <p class="price">${{ product.price }}</p>                     
+                    </div>
+                    <div class="product-name">Кількість</div> 
+                    <div class="product-count border">                                                
                         <form action="{% url "cart:cart_add" product.id %}" method="post" class="display-flex">
-                            {{ cart_product_form }}
-                            {% csrf_token %}
-                            <input class="round-black-btn" type="submit" value="Add to cart">
+                            {% csrf_token %} 
+                            <div class="sizer">
+                            <div class="input-group ">
+                                    <span class="input-group-btn">
+                                        <button id="minus" class="btn btn-danger" type="button">-</button>
+                                    </span>
+                                    <input name="quantity" id="calc" min="1" type="text" class="form-control text-center" value="1">
+                                    <span class="input-group-btn">                          
+                                        <button id="plus" class="btn btn-success" type="button">+</button>
+                                    </span>
+                                </div>
+                            </div><!-- /input-group -->
+                                    <input class=" round-black-btn" type="submit" value="Купити">
+                                
+                            
                         </form>
+                        
+                        
                         {% comment %} <a href="#" class="round-black-btn">Купити</a>
                         <a href="#" class="round-black-btn">В порівняння</a>
                         <a href="#" class="round-black-btn">В корзину</a> {% endcomment %}
