--- a/static/css/style.css
+++ b/static/css/style.css
@@ -634,6 +634,7 @@ border-bottom-left-radius:0;
 }
 .display-flex {
 	display: flex;
+  width: 100%;
 }
 .align-center {
 	align-items: center;
@@ -689,6 +690,7 @@ border-bottom-left-radius:0;
 	color: #7a7a7a;
 }
 .product-dtl .form-control {
+  width: 50px;
 	font-size: 15px;
 }
 .product-dtl label {
@@ -700,7 +702,10 @@ border-bottom-left-radius:0;
 	box-shadow: none;
 }
 .product-count {
+  display: flex;
+  flex-direction: row;
 	margin-top: 15px; 
+  width: 100%;
 }
 .product-count .qtyminus,
 .product-count .qtyplus {
@@ -720,16 +725,17 @@ border-bottom-left-radius:0;
 	border-radius: 0 3px 3px 0; 
 }
 .product-count .qty {
-	width: 60px;
+	/* width: 60px; */
 	text-align: center;
 }
 .round-black-btn {
+  align-self:flex-end;
 	border-radius: 4px;
     background: #212529;
     color: #fff;
     padding: 7px 45px;
-    display: inline-block;
-    margin-top: 20px;
+    /* display: inline-block; */
+    /* margin-top: 20px; */
     border: solid 2px #212529; 
     transition: all 0.5s ease-in-out 0s;
 }
@@ -793,6 +799,7 @@ border-bottom-left-radius:0;
 	font-size: 14px;
 }
 .review-form input.form-control {
+  /* width: 100px; */
 	height: 40px;
 }
 .review-form textarea.form-control {
@@ -801,6 +808,13 @@ border-bottom-left-radius:0;
 .review-form .round-black-btn {
 	text-transform: uppercase;
 	cursor: pointer;
+}
+.sizer{
+  width: 130px;
+  align-self:flex-start;
+}
+.buybutton{
+  align-self:flex-end;
 }
 
 
@@ -963,4 +977,49 @@ border-bottom-left-radius:0;
 .header-h1-right h1 {
   padding-right: 0;
   border-right: none;
+}
+/* Оплата товарів */
+.table-scroll-body {
+  max-height: 300px;
+  overflow-x: auto;
+  margin-top: 0px;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #eee;
+}
+.table-scroll table {
+  width:100%;
+  table-layout: fixed;
+  border: none;
+}
+.table-scroll thead th {
+  font-weight: bold;
+  text-align: left;
+  border: none;
+  padding: 10px 15px;
+  background: #d8d8d8;
+  font-size: 14px;
+  border-left: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+}
+.table-scroll tbody td {
+  text-align: left;
+  border-left: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+  padding: 10px 15px;
+  font-size: 14px;
+  vertical-align: top;
+}
+.table-scroll tbody tr:nth-child(even){
+  background: #f3f3f3;
+}
+
+/* Стили для скролла */
+::-webkit-scrollbar {
+  width: 6px;
+}
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 }
