--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1023,3 +1023,14 @@ border-bottom-left-radius:0;
 ::-webkit-scrollbar-thumb {
   box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 }
+
+.d{
+  min-height: 100vh
+}
+.c{
+  min-height: 100vh
+}
+.b{
+  min-height: 100vh
+}
+
